--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,9 @@
 <section class="auth">
   <div class="auth__left">
-    <img src="../../assets/img/img-auth.png">
+    <img src="../../assets/img/banner-effect-2.png" />
   </div>
   <div class="auth__right">
+    <img src="../../assets/img/img-auth.png" />
     <div class="auth__content">
       <router-outlet></router-outlet>
     </div>
