--- a/src/app/main/main-layout/footer/footer.component.html
+++ b/src/app/main/main-layout/footer/footer.component.html
@@ -1,131 +1,197 @@
 <footer>
   <div class="container">
     <div class="row top">
-      <div class="col-4 top__item">
+      <div class="col-12 col-lg-4 top__item top options">
         <h6>123 Phim</h6>
         <div class="row">
-          <div class="col-6 top__info">
+          <div class="col-12 col-lg-6 top__info">
             <a>FAQ</a>
             <a>Brand Guidelines</a>
           </div>
-          <div class="col-6 top__info">
+          <div class="col-12 col-lg-6 top__info">
             <a>Thỏa thuận sử dụng</a>
-            <a>Quy chế hoạt động</a>
+            <a class="hide">Quy chế hoạt động</a>
             <a>Chính sách bảo mật</a>
             <a>Quyền lợi thành viên</a>
           </div>
         </div>
       </div>
-      <div class="col-4 top__item">
+      <div class="col-4 top__item partners">
         <h6>Đối tác</h6>
         <div class="row top__icon__partner">
           <div class="col-12">
             <a target="_blank" href="https://www.cgv.vn/" title="CGV">
-              <img class="iconConnect bg-light" src="../../../assets/img/cgv.png"/>
+              <img
+                class="iconConnect bg-light"
+                src="../../../assets/img/cgv.png"
+              />
             </a>
             <a target="_blank" href="http://bhdstar.vn" title="BHD">
               <img class="iconConnect" src="../../../assets/img/bhd.png" />
             </a>
             <a target="_blank" href="http://galaxycine.vn" title="Galaxy">
-              <img class="iconConnect" src="../../../assets/img/galaxycine.png"/>
+              <img
+                class="iconConnect"
+                src="../../../assets/img/galaxycine.png"
+              />
             </a>
             <a target="_blank" href="http://cinestar.com.vn" title="Cinestar">
-              <img class="iconConnect" src="../../../assets/img/cinestar.png"/>
+              <img class="iconConnect" src="../../../assets/img/cinestar.png" />
             </a>
-            <a target="_blank" href="http://lottecinemavn.com" title="Lotte Cinema">
-              <img class="iconConnect" src="../../../assets/img/lotte.png"/>
+            <a
+              target="_blank"
+              href="http://lottecinemavn.com"
+              title="Lotte Cinema"
+            >
+              <img class="iconConnect" src="../../../assets/img/lotte.png" />
             </a>
           </div>
           <div class="col-12">
-            <a target="_blank" href="https://www.megagscinemas.vn" title="MegaGS">
-              <img class="iconConnect" src="../../../assets/img/megags.png">
+            <a
+              target="_blank"
+              href="https://www.megagscinemas.vn"
+              title="MegaGS"
+            >
+              <img class="iconConnect" src="../../../assets/img/megags.png" />
             </a>
             <a target="_blank" href="https://www.betacineplex.vn/" title="Beta">
-              <img class="iconConnect" src="../../../assets/img/bt.jpg">
+              <img class="iconConnect" src="../../../assets/img/bt.jpg" />
             </a>
             <a target="_blank" href="http://ddcinema.vn" title="DDC">
-              <img class="iconConnect" src="../../../assets/img/dongdacinema.png">
+              <img
+                class="iconConnect"
+                src="../../../assets/img/dongdacinema.png"
+              />
             </a>
-            <a target="_blank" href="https://touchcinema.com/" title="Touch Cinema">
-              <img class="iconConnect" src="../../../assets/img/TOUCH.png">
+            <a
+              target="_blank"
+              href="https://touchcinema.com/"
+              title="Touch Cinema"
+            >
+              <img class="iconConnect" src="../../../assets/img/TOUCH.png" />
             </a>
             <a target="_blank" href="https://cinemaxvn.com/" title="Cinemax">
-              <img class="iconConnect" src="../../../assets/img/cnx.jpg">
+              <img class="iconConnect" src="../../../assets/img/cnx.jpg" />
             </a>
           </div>
           <div class="col-12">
             <a target="_blank" href="http://starlight.vn/" title="Starlight">
-              <img class="iconConnect" src="../../../assets/img/STARLIGHT.png">
+              <img
+                class="iconConnect"
+                src="../../../assets/img/STARLIGHT.png"
+              />
             </a>
             <a target="_blank" href="https://www.dcine.vn/" title="Dcine">
-              <img class="iconConnect" src="../../../assets/img/dcine.png">
+              <img class="iconConnect" src="../../../assets/img/dcine.png" />
             </a>
             <a target="_blank" href="https://zalopay.vn/" title="ZaloPay">
-              <img class="iconConnect" src="../../../assets/img/zalopay_icon.png">
+              <img
+                class="iconConnect"
+                src="../../../assets/img/zalopay_icon.png"
+              />
             </a>
             <a target="_blank" href="https://www.payoo.vn/" title="Payoo">
-              <img class="iconConnect" src="../../../assets/img/payoo.jpg">
+              <img class="iconConnect" src="../../../assets/img/payoo.jpg" />
             </a>
-            <a target="_blank" href="https://www.vietcombank.com.vn/" title="Vietcombank">
-              <img class="iconConnect" src="../../../assets/img/VCB.png">
+            <a
+              target="_blank"
+              href="https://www.vietcombank.com.vn/"
+              title="Vietcombank"
+            >
+              <img class="iconConnect" src="../../../assets/img/VCB.png" />
             </a>
           </div>
           <div class="col-12">
-            <a target="_blank" href="http://www.agribank.com.vn/" title="Agribank">
-              <img class="iconConnect" src="../../../assets/img/AGRIBANK.png">
+            <a
+              target="_blank"
+              href="http://www.agribank.com.vn/"
+              title="Agribank"
+            >
+              <img class="iconConnect" src="../../../assets/img/AGRIBANK.png" />
             </a>
-            <a target="_blank" href="https://www.vietinbank.vn/" title="Vietinbank">
-              <img class="iconConnect" src="../../../assets/img/VIETTINBANK.png">
+            <a
+              target="_blank"
+              href="https://www.vietinbank.vn/"
+              title="Vietinbank"
+            >
+              <img
+                class="iconConnect"
+                src="../../../assets/img/VIETTINBANK.png"
+              />
             </a>
-            <a target="_blank" href="https://www.indovinabank.com.vn/" title="IVB">
-              <img class="iconConnect" src="../../../assets/img/IVB.png">
+            <a
+              target="_blank"
+              href="https://www.indovinabank.com.vn/"
+              title="IVB"
+            >
+              <img class="iconConnect" src="../../../assets/img/IVB.png" />
             </a>
             <a target="_blank" href="http://123go.vn" title="123Go">
-              <img class="iconConnect" src="../../../assets/img/123go.png">
+              <img class="iconConnect" src="../../../assets/img/123go.png" />
             </a>
             <a target="_blank" href="http://laban.vn" title="La Bàn">
-              <img class="iconConnect" src="../../../assets/img/laban.png">
+              <img class="iconConnect" src="../../../assets/img/laban.png" />
             </a>
           </div>
         </div>
       </div>
-      <div class="col-4 top__item">
+      <div class="col-12 col-lg-4 top__item social">
         <div class="row top__app__social">
-          <div class="col-6">
+          <div class="col-6 mobileapp">
             <h6>MOBILE APP</h6>
-            <a target="_blank" href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197" title="Apple App">
-              <img class="iconApp" src="../../../assets/img/apple-logo.png">
+            <a
+              target="_blank"
+              href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197"
+              title="Apple App"
+            >
+              <img class="iconApp" src="../../../assets/img/apple-logo.png" />
             </a>
-            <a target="_blank" href="https://play.google.com/store/apps/details?id=vn.com.vng.phim123" title="Android App">
-              <img class="iconApp" src="../../../assets/img/android-logo.png">
+            <a
+              target="_blank"
+              href="https://play.google.com/store/apps/details?id=vn.com.vng.phim123"
+              title="Android App"
+            >
+              <img class="iconApp" src="../../../assets/img/android-logo.png" />
             </a>
           </div>
-          <div class="col-6">
+          <div class="col-6 socialapp">
             <h6>SOCIAL</h6>
-            <a target="_blank" href="https://www.facebook.com/tix.vn/" title="Facebook social">
-              <img class="iconApp" src="../../../assets/img/facebook-logo.png">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/tix.vn/"
+              title="Facebook social"
+            >
+              <img
+                class="iconApp"
+                src="../../../assets/img/facebook-logo.png"
+              />
             </a>
-            <a target="_blank" href="https://zalo.me/tixdatve" title="Zalo social">
-              <img class="iconApp" src="../../../assets/img/zalo-logo.png">
+            <a
+              target="_blank"
+              href="https://zalo.me/tixdatve"
+              title="Zalo social"
+            >
+              <img class="iconApp" src="../../../assets/img/zalo-logo.png" />
             </a>
           </div>
         </div>
       </div>
     </div>
-    <hr>
+    <hr />
     <div class="row bottom">
-      <div class="col-1 bottom__logo">
-        <img class="zionLogo" src="../../../assets/img/zion-logo.jpg">
+      <div class="col-12 col-lg-1 bottom__logo">
+        <img class="zionLogo" src="../../../assets/img/zion-logo.jpg" />
       </div>
-      <div class="col-9 bottom__info">
+      <div class="col-12 col-lg-9 bottom__info">
         <h6>123PHIM - SẢN PHẨM CỦA CÔNG TY CỔ PHẦN ZION</h6>
-        <p>Địa chỉ: 52 Nguyễn Ngọc Lộc, Phường 14, Quận 10, Thành phố Hồ Chí Minh</p>
+        <p>
+          Địa chỉ: 52 Nguyễn Ngọc Lộc, Phường 14, Quận 10, Thành phố Hồ Chí Minh
+        </p>
         <p>Mã số thuế: 241299</p>
       </div>
-      <div class="col-2 bottom__logo">
-        <img class="boCoLogo" src="../../../assets/img/bo-cong-thuong.png">
+      <div class="col-12 col-lg-2 bottom__logo">
+        <img class="boCoLogo" src="../../../assets/img/bo-cong-thuong.png" />
       </div>
     </div>
   </div>
 </footer>
-
