--- a/src/app/main/trang-chu/danh-sach-phim/danh-sach-phim.component.html
+++ b/src/app/main/trang-chu/danh-sach-phim/danh-sach-phim.component.html
@@ -30,8 +30,11 @@
       <owl-carousel-o [options]="customOptions">
         <ng-template class="slide" carouselSlide>
           <div class="row">
-            <div *ngFor="let movie of movieList | slice: 0:4" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
+            <div
+              *ngFor="let movie of movieList | slice: 0:4"
+              class="col-md-6 col-lg-3"
+            >
+              <div routerLink="/chitietphim/{{ movie.maPhim }}" class="card">
                 <img class="card-img-top" [src]="movie.hinhAnh" />
                 <div class="overlay"></div>
                 <div class="card-body">
@@ -47,15 +50,23 @@
                     </div>
                   </div>
                   <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
+                    <button
+                      routerLink="/chitietphim/{{ movie.maPhim }}"
+                      class="btn"
+                    >
+                      MUA VÉ
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div *ngFor="let movie of movieList | slice: 5:9" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
+            <div
+              *ngFor="let movie of movieList | slice: 5:9"
+              class="col-md-6 col-lg-3"
+            >
+              <div routerLink="/chitietphim/{{ movie.maPhim }}" class="card">
                 <img class="card-img-top" [src]="movie.hinhAnh" />
                 <div class="overlay"></div>
                 <div class="card-body">
@@ -71,7 +82,12 @@
                     </div>
                   </div>
                   <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
+                    <button
+                      routerLink="/chitietphim/{{ movie.maPhim }}"
+                      class="btn"
+                    >
+                      MUA VÉ
+                    </button>
                   </div>
                 </div>
               </div>
@@ -80,8 +96,11 @@
         </ng-template>
         <ng-template class="slide" carouselSlide>
           <div class="row">
-            <div *ngFor="let movie of movieList | slice: 10:14" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
+            <div
+              *ngFor="let movie of movieList | slice: 10:14"
+              class="col-md-6 col-lg-3"
+            >
+              <div routerLink="/chitietphim/{{ movie.maPhim }}" class="card">
                 <img class="card-img-top" [src]="movie.hinhAnh" />
                 <div class="overlay"></div>
                 <div class="card-body">
@@ -97,15 +116,23 @@
                     </div>
                   </div>
                   <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
+                    <button
+                      routerLink="/chitietphim/{{ movie.maPhim }}"
+                      class="btn"
+                    >
+                      MUA VÉ
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div *ngFor="let movie of movieList | slice: 15:19" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
+            <div
+              *ngFor="let movie of movieList | slice: 15:19"
+              class="col-md-6 col-lg-3"
+            >
+              <div routerLink="/chitietphim/{{ movie.maPhim }}" class="card">
                 <img class="card-img-top" [src]="movie.hinhAnh" />
                 <div class="overlay"></div>
                 <div class="card-body">
@@ -121,7 +148,12 @@
                     </div>
                   </div>
                   <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
+                    <button
+                      routerLink="/chitietphim/{{ movie.maPhim }}"
+                      class="btn"
+                    >
+                      MUA VÉ
+                    </button>
                   </div>
                 </div>
               </div>
@@ -130,109 +162,5 @@
         </ng-template>
       </owl-carousel-o>
     </div>
-    <!-- <div class="tab-pane fade show" id="sapChieu" role="tabpanel">
-      <owl-carousel-o [options]="customOptions">
-        <ng-template class="slide" carouselSlide>
-          <div class="row">
-            <div *ngFor="let movie of movieList | slice: 20:24" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
-                <img class="card-img-top" [src]="movie.hinhAnh" />
-                <div class="overlay"></div>
-                <div class="card-body">
-                  <h4 class="card-title">{{ movie.tenPhim }}</h4>
-                  <div class="info">
-                    <span>2021</span>
-                    <div class="rating">
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                    </div>
-                  </div>
-                  <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div *ngFor="let movie of movieList | slice: 25:29" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
-                <img class="card-img-top" [src]="movie.hinhAnh" />
-                <div class="overlay"></div>
-                <div class="card-body">
-                  <h4 class="card-title">{{ movie.tenPhim }}</h4>
-                  <div class="info">
-                    <span>2021</span>
-                    <div class="rating">
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                    </div>
-                  </div>
-                  <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </ng-template>
-        <ng-template class="slide" carouselSlide>
-          <div class="row">
-            <div *ngFor="let movie of movieList | slice: 30:34" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
-                <img class="card-img-top" [src]="movie.hinhAnh" />
-                <div class="overlay"></div>
-                <div class="card-body">
-                  <h4 class="card-title">{{ movie.tenPhim }}</h4>
-                  <div class="info">
-                    <span>2021</span>
-                    <div class="rating">
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                    </div>
-                  </div>
-                  <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div *ngFor="let movie of movieList | slice: 35:39" class="col-3">
-              <div routerLink="/chitietphim/{{movie.maPhim}}" class="card">
-                <img class="card-img-top" [src]="movie.hinhAnh" />
-                <div class="overlay"></div>
-                <div class="card-body">
-                  <h4 class="card-title">{{ movie.tenPhim }}</h4>
-                  <div class="info">
-                    <span>2021</span>
-                    <div class="rating">
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                    </div>
-                  </div>
-                  <div class="btnDetail">
-                    <button routerLink="/chitietphim/{{movie.maPhim}}" class="btn">MUA VÉ</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </ng-template>
-      </owl-carousel-o>
-    </div> -->
   </div>
 </section>
