--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,34 +1,33 @@
-.adminPage{
+.adminPage {
   display: flex;
-  position: fixed;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
-  #sidebar{
+  #sidebar {
     width: 20%;
     background: #505170;
     //max-width: 300px;
     //min-width: 300px;
     color: #fff;
-    .logo{
+    .logo {
       text-align: center;
       margin: 10px auto;
-      img{
+      img {
         margin-right: 10px;
       }
-      span{
+      span {
         color: #d6c13b;
         font-size: 18px;
         font-weight: 500;
       }
     }
-    .infoAdmin{
+    .infoAdmin {
       //background-color: #d6c13b;
       padding: 25px;
       position: relative;
       margin-bottom: 20px;
-      .userLogo{
+      .userLogo {
         text-align: center;
-        .imgAdmin{
+        .imgAdmin {
           margin: 0 auto;
           width: 80px;
           height: 80px;
@@ -37,13 +36,13 @@
           background-size: cover;
           background-position: center;
         }
-        h3{
+        h3 {
           margin-top: 10px;
           font-size: 18px;
         }
       }
-      &::after{
-        content: '';
+      &::after {
+        content: "";
         width: 94%;
         position: absolute;
         bottom: 0;
@@ -52,31 +51,31 @@
         background: #d6c13b;
       }
     }
-    .menu{
+    .menu {
       list-style: none;
       padding: 0;
-      li{
+      li {
         background: transparent;
         cursor: pointer;
         padding: 15px 30px;
         font-size: 16px;
         border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        a{
+        a {
           color: #fff;
           text-decoration: none;
-          fa-icon{
+          fa-icon {
             margin-right: 20px;
           }
         }
-        &:hover{
+        &:hover {
           background: #32373d;
         }
-        &:focus{
+        &:focus {
           outline: none;
         }
-        &.active{
+        &.active {
           background: #d6c13b;
-          a{
+          a {
             color: #000;
             font-weight: 500;
           }
@@ -84,7 +83,7 @@
       }
     }
   }
-  #content{
+  #content {
     width: 80%;
     background-image: url(../../assets/img/bg1.jpg);
     // background-position: center;
