--- a/src/app/main/chi-tiet-phong-ve/chi-tiet-phong-ve.component.scss
+++ b/src/app/main/chi-tiet-phong-ve/chi-tiet-phong-ve.component.scss
@@ -2,10 +2,9 @@
   margin-top: 60px;
   display: flex;
   .ticketRoom__bg {
-    width: 26%;
+    width: 5%;
     background-position: center;
     background-size: cover;
-    left: -22%;
     position: relative;
     .bg__overlay {
       content: "";
@@ -19,9 +18,8 @@
     }
   }
   .seatCheckout {
-    width: 70%;
+    width: 67%;
     position: relative;
-    left: -22%;
     padding: 30px 60px;
     .topContent {
       display: flex;
@@ -52,7 +50,7 @@
           margin-bottom: 0;
           text-align: center;
         }
-        .count-down{
+        .count-down {
           color: #fb4226;
           font-size: 29px;
           margin-bottom: 0;
@@ -67,8 +65,6 @@
         }
       }
       .listSeat {
-        width: 60%;
-        margin: 0 auto;
         position: relative;
         .rowSeat {
           display: flex;
@@ -201,7 +197,7 @@
       background: rgb(139, 139, 139);
     }
     position: fixed;
-    width: 440px;
+    width: 28%;
     right: 0;
     height: 100%;
     box-shadow: 0 0 15px rgb(0 0 0 / 30%);
@@ -313,19 +309,19 @@
   }
 }
 
-.modal-rebookticket{
-  background-color: rgba(0,0,0,.85);
-  .modal-dialog{
+.modal-rebookticket {
+  background-color: rgba(0, 0, 0, 0.85);
+  .modal-dialog {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     max-width: 45%;
-    .modal-content{
-      .modal-body{
+    .modal-content {
+      .modal-body {
         text-align: center;
         padding: 40px 20px;
-        span{
+        span {
           color: #fb4226;
           cursor: pointer;
         }
@@ -334,23 +330,23 @@
   }
 }
 
-.modal-success{
-  background-color: rgba(0,0,0,.85);
-  .modal-dialog{
+.modal-success {
+  background-color: rgba(0, 0, 0, 0.85);
+  .modal-dialog {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     max-width: 45%;
-    .modal-content{
-      .modal-body{
+    .modal-content {
+      .modal-body {
         text-align: center;
         padding: 40px 20px;
-        p{
+        p {
           font-size: 20px;
           margin-top: 10px;
         }
-        button{
+        button {
           margin: 0 10px;
           font-size: 14px;
         }
@@ -359,23 +355,22 @@
   }
 }
 
-
 /* KEYFRAMES */
 
 @keyframes spin {
   from {
     transform: rotate(0);
   }
-  to{
+  to {
     transform: rotate(359deg);
   }
 }
 
 @keyframes spin3D {
   from {
-    transform: rotate3d(.5,.5,.5, 360deg);
+    transform: rotate3d(0.5, 0.5, 0.5, 360deg);
   }
-  to{
+  to {
     transform: rotate3d(0deg);
   }
 }
@@ -422,8 +417,8 @@
     transform: scale(1);
   }
   to {
-    opacity: .25;
-    transform: scale(.75);
+    opacity: 0.25;
+    transform: scale(0.75);
   }
 }
 .spinner-box {
@@ -455,7 +450,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(63,249,220);
+  background: rgb(63, 249, 220);
   transform: rotate(45deg);
   animation: configure-xclockwise 3s ease-in-out 0s infinite alternate;
 }
@@ -466,7 +461,7 @@
   background-color: #fff;
 }
 
-.loader{
+.loader {
   color: #9b9b9b;
   font-size: 20px;
 }
