--- a/src/app/main/thong-tin-ca-nhan/thong-tin-ca-nhan.component.html
+++ b/src/app/main/thong-tin-ca-nhan/thong-tin-ca-nhan.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <section class="userInfo">
   <div class="left">
-    <img src="../../assets/img/img-auth.png">
+    <img src="../../assets/img/img-auth.png" />
   </div>
   <div class="right">
     <div class="userInfo__content">
@@ -32,49 +32,91 @@
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="thongTinCaNhan" role="tabpanel">
+        <div
+          class="tab-pane fade show active"
+          id="thongTinCaNhan"
+          role="tabpanel"
+        >
           <form [formGroup]="formUpdate" (ngSubmit)="handleUpdate()">
             <div class="form__content">
               <div class="form-group">
                 <label>Tài khoản</label>
-                <input [attr.disabled]="true" type="text" class="form-control" formControlName="taiKhoan">
+                <input
+                  [attr.disabled]="true"
+                  type="text"
+                  class="form-control"
+                  formControlName="taiKhoan"
+                />
                 <!-- <app-error-message name="taiKhoan" [control]="formUpdate.get('taiKhoan')"></app-error-message> -->
               </div>
               <div class="form-group">
                 <label>Mật khẩu</label>
-                <input type="password" class="form-control" formControlName="matKhau">
-                <app-error-message name="matKhau" [control]="formUpdate.get('matKhau')"></app-error-message>
+                <input
+                  type="password"
+                  class="form-control"
+                  formControlName="matKhau"
+                />
+                <app-error-message
+                  name="matKhau"
+                  [control]="formUpdate.get('matKhau')"
+                ></app-error-message>
               </div>
               <div class="form-group">
                 <label>Email</label>
-                <input type="email" class="form-control" formControlName="email">
-                <app-error-message name="email" [control]="formUpdate.get('email')"></app-error-message>
+                <input
+                  type="email"
+                  class="form-control"
+                  formControlName="email"
+                />
+                <app-error-message
+                  name="email"
+                  [control]="formUpdate.get('email')"
+                ></app-error-message>
               </div>
               <div class="form-group">
                 <label>Số điện thoại</label>
-                <input type="text" class="form-control" formControlName="soDt">
-                <app-error-message name="soDt" [control]="formUpdate.get('soDt')"></app-error-message>
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="soDt"
+                />
+                <app-error-message
+                  name="soDt"
+                  [control]="formUpdate.get('soDt')"
+                ></app-error-message>
               </div>
               <div class="form-group">
                 <label>Họ tên</label>
-                <input type="text" class="form-control" formControlName="hoTen">
-                <app-error-message name="hoTen" [control]="formUpdate.get('hoTen')"></app-error-message>
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="hoTen"
+                />
+                <app-error-message
+                  name="hoTen"
+                  [control]="formUpdate.get('hoTen')"
+                ></app-error-message>
               </div>
             </div>
-            <p *ngIf="error" class="alert alert-danger">{{this.error}}</p>
+            <p *ngIf="error" class="alert alert-danger">{{ this.error }}</p>
             <button class="btn" [disabled]="loading">Cập nhật</button>
           </form>
         </div>
         <div class="tab-pane fade show" id="lichSuDatVe" role="tabpanel">
-          <ng-container *ngFor="let thongTinDatVe of thongTinTaiKhoan?.thongTinDatVe">
+          <ng-container
+            *ngFor="let thongTinDatVe of thongTinTaiKhoan?.thongTinDatVe"
+          >
             <ng-container *ngFor="let ghe of thongTinDatVe?.danhSachGhe">
               <div class="thongTinDatVe">
-                <img src="../../../assets/img/movie.jpg">
-              <div class="thongTinDatVe__content">
-                <p class="nameMovie">Phim {{thongTinDatVe.tenPhim}}</p>
-                <p class="cinema">Hệ thống rạp {{ghe.tenHeThongRap}}</p>
-                <p class="time">Ngày đặt: {{setupDateTime(thongTinDatVe.ngayDat)}} - {{ghe.tenCumRap}} - Ghế {{ghe.tenGhe}} </p>
-              </div>
+                <img src="../../../assets/img/movie.jpg" />
+                <div class="thongTinDatVe__content">
+                  <p class="nameMovie">Phim {{ thongTinDatVe.tenPhim }}</p>
+                  <p class="cinema">Hệ thống rạp {{ ghe.tenHeThongRap }}</p>
+                  <p class="time">
+                    Ngày đặt: {{ setupDateTime(thongTinDatVe.ngayDat) }} -
+                    {{ ghe.tenCumRap }} - Ghế {{ ghe.tenGhe }}
+                  </p>
+                </div>
               </div>
             </ng-container>
           </ng-container>
@@ -83,3 +125,40 @@
     </div>
   </div>
 </section>
+<button
+  #btnShowModal
+  [hidden]="true"
+  type="button"
+  class="btn btn-primary"
+  data-toggle="modal"
+  data-target="#signinModal"
+>
+  Launch demo modal
+</button>
+<div
+  class="modal fade modal-editsuccess"
+  id="signinModal"
+  tabindex="-1"
+  aria-labelledby="modelTitleId"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button
+          #btnCloseModal
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img width="70" src="../../../assets/img/Post-notification.png" />
+        <p>Bạn đã cập nhật thông tin tài khoản thành công!</p>
+      </div>
+    </div>
+  </div>
+</div>
