--- a/src/app/main/trang-chu/lich-chieu/lich-chieu.component.scss
+++ b/src/app/main/trang-chu/lich-chieu/lich-chieu.component.scss
@@ -2,6 +2,7 @@
   width: 60%;
   margin: 40px auto;
   .showTimes__content {
+    margin: 0;
     padding: 0;
     display: flex;
     ul {
@@ -50,9 +51,11 @@
       border-bottom: 1px solid #ebebec;
       height: 705px;
       width: 30%;
+      overflow: auto;
       .cinema {
         cursor: pointer;
         display: flex;
+        justify-content: space-around;
         padding: 15px 20px;
         position: relative;
         opacity: 0.5;
@@ -83,7 +86,7 @@
             a {
               font-size: 12px;
               color: #fb4226;
-              &:hover{
+              &:hover {
                 text-decoration: none;
               }
             }
@@ -164,9 +167,16 @@
   }
 }
 
+@media screen and (max-width: 992px) {
+  .showTimes {
+    width: 80%;
+  }
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 /* Track */
